; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_w32_common.c_decode_utf16.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_w32_common.c_decode_utf16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo_w32_state = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"Invalid UTF-16 input\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vo_w32_state*, i32)* @decode_utf16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_utf16(%struct.vo_w32_state* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vo_w32_state*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.vo_w32_state* %0, %struct.vo_w32_state** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = call i64 @IS_HIGH_SURROGATE(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.vo_w32_state*, %struct.vo_w32_state** %4, align 8
  %13 = getelementptr inbounds %struct.vo_w32_state, %struct.vo_w32_state* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  store i32 0, i32* %3, align 4
  br label %47

14:                                               ; preds = %2
  %15 = load i32, i32* %5, align 4
  %16 = call i64 @IS_LOW_SURROGATE(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %35

18:                                               ; preds = %14
  %19 = load %struct.vo_w32_state*, %struct.vo_w32_state** %4, align 8
  %20 = getelementptr inbounds %struct.vo_w32_state, %struct.vo_w32_state* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %18
  %24 = load %struct.vo_w32_state*, %struct.vo_w32_state** %4, align 8
  %25 = call i32 @MP_ERR(%struct.vo_w32_state* %24, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %47

26:                                               ; preds = %18
  %27 = load %struct.vo_w32_state*, %struct.vo_w32_state** %4, align 8
  %28 = getelementptr inbounds %struct.vo_w32_state, %struct.vo_w32_state* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %5, align 4
  %31 = call i32 @decode_surrogate_pair(i32 %29, i32 %30)
  store i32 %31, i32* %6, align 4
  %32 = load %struct.vo_w32_state*, %struct.vo_w32_state** %4, align 8
  %33 = getelementptr inbounds %struct.vo_w32_state, %struct.vo_w32_state* %32, i32 0, i32 0
  store i32 0, i32* %33, align 4
  %34 = load i32, i32* %6, align 4
  store i32 %34, i32* %3, align 4
  br label %47

35:                                               ; preds = %14
  %36 = load %struct.vo_w32_state*, %struct.vo_w32_state** %4, align 8
  %37 = getelementptr inbounds %struct.vo_w32_state, %struct.vo_w32_state* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %45

40:                                               ; preds = %35
  %41 = load %struct.vo_w32_state*, %struct.vo_w32_state** %4, align 8
  %42 = getelementptr inbounds %struct.vo_w32_state, %struct.vo_w32_state* %41, i32 0, i32 0
  store i32 0, i32* %42, align 4
  %43 = load %struct.vo_w32_state*, %struct.vo_w32_state** %4, align 8
  %44 = call i32 @MP_ERR(%struct.vo_w32_state* %43, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %47

45:                                               ; preds = %35
  %46 = load i32, i32* %5, align 4
  store i32 %46, i32* %3, align 4
  br label %47

47:                                               ; preds = %45, %40, %26, %23, %10
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i64 @IS_HIGH_SURROGATE(i32) #1

declare dso_local i64 @IS_LOW_SURROGATE(i32) #1

declare dso_local i32 @MP_ERR(%struct.vo_w32_state*, i8*) #1

declare dso_local i32 @decode_surrogate_pair(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
